# ut-indicator-torch

./: CMakeLists.txt  clickable.json  indicator-torch.desktop  indicator-torch.desktop.in  manifest.json.in
.clickable/armhf/: Dockerfile  name.txt
indicator/: CMakeLists.txt  nfsprodriver-indicator-torch.py
plugins/Indicator/: indicator.cpp
po/: CMakeLists.txt  indicator-torch.pot
